feat - added technologies section

--- a/LibraryForWebsite/components.html
+++ b/LibraryForWebsite/components.html
@@ -1,23 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rajib Das Profile</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <h1>RAJIB KUMAR DAS</h1>
-        <h2>Crazy for leaning JavaScript,HTML,CSS & Frot-end Tech.
-            Seasoned Sales-pro making a leap for career change. Untameed love for cars
-        </h2>
-        <ul>
-            <li>Home</li>
-            <li>Projects</li>
-            <li>Blogs</li>
-        </ul>
+      <h1>RAJIB KUMAR DAS</h1>
+      <h3>
+        Crazy for leaning JavaScript,HTML,CSS & Frot-end Tech. Seasoned
+        Sales-pro making a leap for career change. Untamed love for cars
+      </h3>
+      <ul>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>Blogs</li>
+      </ul>
     </nav>
-    <hr>
-</body>
+    <hr />
+
+    <!-- <img src="/LibraryForWebsite/picture/picture1.jpg"/> -->
+    <img src="/LibraryForWebsite/picture/picture2.svg" />
+
+    <header>
+      <h1>About Me - Rajib Das : An Aspiring Front-end developer</h1>
+      <p>
+        Rajib loves programming, writing,speaking, traveling, and lifting heavy
+        things. He does not love talking about himself in the 3rd person. He is
+        the sales professionl at XYZ, a company that provides Telecom Service.
+        He's is gearing up to learn <strong>JavaScript, HTML, CSS</strong> and
+        other front-end technologies and has a decent knowledge on Java.
+        Previously, he spent more than a decade building solutions that served
+        hundreds of millions of users while working as a sales professional at
+        Toyota, Hyundai, Hero MotoCorp and Godrej & Boyce. For more info, check
+        out his projects and blogs.
+      </p>
+    </header>
+
+    <section>
+      <div>
+        <h3>Technologies</h3>
+        <p>
+          I have experience using Java, J2EE, EJB, Web Services, JSON, Spring,
+          XML, JDBC and Hibernate.I have gained sound knowledge of MVC
+          Architecture, Spring Framework and Java Design Patterns.Proven
+          expertise in back-end/server-side Java Technologies such as:
+          Enterprise Java Beans (EJB),Linux, web services, Java persistence APIs
+          (JPA), Java Database Connectivity (JDBC), SQL, Spring Boot.I have been
+          currenlty working on Core Java with strong understanding & working
+          knowledge of OOPs and also APIs like Collections, Multi-Threading,
+          Exception.My job role involves developing and implementing Web
+          Services using REST.I set up continuous CI/CD environmnet with Git,
+          GitHub.
+        </p>
+      </div>
+    </section>
+
+    <section>
+        <div>
+            <h3></h3>
+        </div>
+    </section>
+  </body>
 </html>
