feat- added blogs

--- a/LibraryForWebsite/components.html
+++ b/LibraryForWebsite/components.html
@@ -38,7 +38,7 @@
         out his projects and blogs.
       </p>
     </header>
-
+    <hr />
     <section>
       <div>
         <h3>Technologies</h3>
@@ -57,11 +57,33 @@
         </p>
       </div>
     </section>
+    <hr />
+    <section>
+      <div>
+        <h3>Projects</h3>
+        <p>
+          Deployed scalable telecom, automobile and consumer durables web and
+          hybrid mobile apps using HTML,CSS and JavaScript.Collaborated in 140+
+          projects with 50+ clients all around the world. I am also interested
+          in data analytics and visualization. Click on the link below to see
+          some of my projects
+        </p>
+        <a href="https://www.google.com/">My Works</a>
+      </div>
+    </section>
+    <hr />
 
     <section>
-        <div>
-            <h3></h3>
-        </div>
+      <div>
+        <h3>Blogs</h3>
+        <p>
+          I have recently started writing blogs, so don't expeect I will have
+          imense followers & host of blogs with lot of interactions. I though
+          expect that at some point of time I will be a okay kind of blogger and
+          may be some of real life learnings can be helpful to the world. To check out some my blog click on the link below
+        </p>
+        <a href="https://www.facebook.com/">My Blogs</a>
+      </div>
     </section>
   </body>
 </html>
