feat- added social media

--- a/LibraryForWebsite/components.html
+++ b/LibraryForWebsite/components.html
@@ -85,5 +85,21 @@
         <a href="https://www.facebook.com/">My Blogs</a>
       </div>
     </section>
+
+    <footer>
+        <h3>Social Media Presence</h3>
+        <p>Have an exciting project you need help with?Connect me on social media</p>
+        <ul>
+            <li>
+                <a href="https://www.google.com/">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://twitter.com/">Twittter</a>
+            </li>
+            <li>
+                <a href="https://github.com/">Github</a>
+            </li>
+        </ul>
+    </footer>
   </body>
 </html>
