--- a/LibraryForWebsite/components.html
+++ b/LibraryForWebsite/components.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet"
     <title>Rajib Das Profile</title>
   </head>
   <body>
@@ -85,7 +86,7 @@
         <a href="https://www.facebook.com/">My Blogs</a>
       </div>
     </section>
-
+<hr>
     <footer>
         <h3>Social Media Presence</h3>
         <p>Have an exciting project you need help with?Connect me on social media</p>
