--- a/LibraryForWebsite/components.html
+++ b/LibraryForWebsite/components.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet"/>
+    <link href="/LibraryForWebsite/style.css" rel="stylesheet"/>
     <title>Rajib Das Profile</title>
   </head>
   <body>
-    <nav>
+    <nav class="navigation">
       <h1>RAJIB KUMAR DAS</h1>
       <h3>
         Crazy for leaning JavaScript,HTML,CSS & Frot-end Tech. Seasoned
@@ -24,6 +24,7 @@
 
     <!-- <img src="/LibraryForWebsite/picture/picture1.jpg"/> -->
     <img src="/LibraryForWebsite/picture/picture2.svg" />
+
 
     <header>
       <h1>About Me - Rajib Das : An Aspiring Front-end developer</h1>
